ссылка на правовую поддержку

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,12 +2,12 @@
   <div class="container">
     <div class="container-footer">
 
-      <div class="pravo">
+      <a href="http://ukab.ru/" target="_blank" class="pravo">
           <span class="pravo-label">
             Правовая поддержка
           </span>
         <%= image_tag asset_pack_path 'logo-bayborodina.svg' %>
-      </div>
+      </a>
 
       <div class="copyright">
         По вопросам участия в конкурсе и партнерства пишите на
