--- a/app/views/header/_header.html.slim
+++ b/app/views/header/_header.html.slim
@@ -49,6 +49,7 @@ header class="#{request.fullpath != '/' && 'header-collapse'}"
       .modal-body
         ul
           li Для участия необходимо заполнение всех обязательных полей в анкете и публикация фотографий.
+          li Запрещено публиковать фото без белья и купальников.
           li Модератор вправе удалить анкету участницы, если фото и/или предоставленная информация не соответствуют действительности (смайлики, клички и тд не допускаются)
           li Накрутка голосов с использованием ботов запрещена.
           li Своей страницей можно делиться в социальных сетях и набирать себе больше голосов.
