--- a/app/views/shared/_organizator.erb
+++ b/app/views/shared/_organizator.erb
@@ -61,6 +61,28 @@
 
   <div class="partners-block">
     <div class="partners-title">
+      ПРИ ПОДДЕРЖКЕ
+    </div>
+    <div class="partners-links">
+      <a
+      class="partners-link"
+      href="https://www.bgoperator.ru/"
+      target="_blank"
+      >
+        <%= image_tag(asset_pack_path('BiblioGlobusLogo.svg'), size: "249x47", alt: "https://www.bgoperator.ru/") %>
+      </a>
+      <a
+      class="partners-link"
+      href="http://www.onlinetours.ru/"
+      target="_blank"
+      >
+        <%= image_tag(asset_pack_path('logo-onlinetours@2x.png'), size: "272x48", alt: "Onlinetours") %>
+      </a>
+    </div>
+  </div>
+
+  <div class="partners-block">
+    <div class="partners-title">
       ИНФОПАРТНЕРЫ
     </div>
     <div class="partners-links">
@@ -114,13 +136,15 @@
       >
         <%= image_tag(asset_pack_path('logo_presswall_itog.svg'), size: "280x140", alt: "ambotis") %>
       </a>
+      <!--
       <a
       class="partners-link"
       href="https://www.ambotis.ru/"
       target="_blank"
       >
-        <%= image_tag(asset_pack_path('ambotis.png'), size: "140x93", alt: "ambotis") %>
+        <%#= image_tag(asset_pack_path('ambotis.png'), size: "140x93", alt: "ambotis") %>
       </a>
+      -->
       <a
       class="partners-link"
       href="https://bronevik.com/"
