--- a/app/views/shared/_organizator.erb
+++ b/app/views/shared/_organizator.erb
@@ -69,7 +69,7 @@
       href="https://www.bgoperator.ru/"
       target="_blank"
       >
-        <%= image_tag(asset_pack_path('BiblioGlobusLogo.svg'), size: "280x53", alt: "https://www.bgoperator.ru/") %>
+        <%= image_tag(asset_pack_path('BGlogos.svg'), size: "280x52", alt: "https://www.bgoperator.ru/") %>
       </a>
     </div>
   </div>
