--- a/app/javascript/packs/_header.scss
+++ b/app/javascript/packs/_header.scss
@@ -229,3 +229,8 @@ header {
 	font-weight: 100;
 	text-transform: uppercase;
 }
+
+.top-banner{
+	border: none !important;
+	border-radius: 0 !important;
+}
