--- a/app/views/shared/_organizator.erb
+++ b/app/views/shared/_organizator.erb
@@ -129,21 +129,19 @@
       >
         <%= image_tag(asset_pack_path('logo_presswall_itog.svg'), size: "280x140", alt: "ambotis") %>
       </a>
-      <!--
-      <a
-      class="partners-link"
-      href="https://www.ambotis.ru/"
-      target="_blank"
-      >
-        <%#= image_tag(asset_pack_path('ambotis.png'), size: "140x93", alt: "ambotis") %>
-      </a>
-      -->
       <a
       class="partners-link"
       href="https://bronevik.com/"
       target="_blank"
       >
         <%= image_tag(asset_pack_path('bronevik@2x.png'), size: "138x49", alt: "bronevik") %>
+      </a>
+      <a
+      class="partners-link"
+      href="http://ukab.ru/"
+      target="_blank"
+      >
+        <%= image_tag(asset_pack_path('logo-bayborodin-co@2x.png'), size: "270x65", alt: "ukab.ru") %>
       </a>
     </div>
   </div>
