--- a/app/views/header/_header.html.slim
+++ b/app/views/header/_header.html.slim
@@ -1,7 +1,7 @@
 .top-banner
   i.fa.fa-ticket
   |&nbsp;
-  span.top-banner-label Продажа туров на конкурс Мисс Туризм Россия 2017, 5 – 8 ноября в Турции, Rixos Sungate
+  span.top-banner-label Продажа туров на финал конкурса красоты Мисс Туризм 2017 / 5-8 ноября, Кемер, Турция
   button type="button" class="btn btn-success btn-sm" data-toggle="modal" data-target="#payment"
     | Подробнее
 header class="#{request.fullpath != '/' && 'header-collapse'}"
