--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,12 +2,14 @@
   <div class="container">
     <div class="container-footer">
 
-      <a href="http://ukab.ru/" target="_blank" class="pravo">
-          <span class="pravo-label">
-            Правовая поддержка
-          </span>
-        <%= image_tag asset_pack_path 'logo-bayborodina.svg' %>
-      </a>
+      <div class="social-pages">
+        <span class="social-pages-label">
+          МЫ В СОЦИАЛЬНЫХ СЕТЯХ
+        </span>
+        <a class="social-pages-btn" href="https://www.facebook.com/MissTurizm.ru/" target="_blank">
+          <%= image_tag(asset_pack_path('icon-bf@2x.png'), size: "40x40") %>
+        </a>
+      </div>
 
       <div class="copyright">
         По вопросам участия в конкурсе и партнерства пишите на
