--- a/app/views/shared/_organizator.erb
+++ b/app/views/shared/_organizator.erb
@@ -124,17 +124,19 @@
       </a>
       <a
       class="partners-link"
-      href="https://dashkov5.ru/"
-      target="_blank"
-      >
-        <%= image_tag(asset_pack_path('logo_presswall_itog.svg'), size: "280x140", alt: "ambotis") %>
-      </a>
-      <a
-      class="partners-link"
       href="https://bronevik.com/"
       target="_blank"
       >
         <%= image_tag(asset_pack_path('bronevik@2x.png'), size: "138x49", alt: "bronevik") %>
+      </a>
+    </div>
+    <div class="partners-links">
+      <a
+      class="partners-link"
+      href="https://dashkov5.ru/"
+      target="_blank"
+      >
+        <%= image_tag(asset_pack_path('logo_presswall_itog.svg'), size: "280x140", alt: "ambotis") %>
       </a>
       <a
       class="partners-link"
