добавил партнера и члена жюри

--- a/app/views/pages/home.erb
+++ b/app/views/pages/home.erb
@@ -69,7 +69,7 @@
       </div>
       <div class="heroes-item-text">
         Регистрируйся прямо сейчас и собирай как можно большей лайков в интернет-голосовании
-        - используй шанс стать одной из 12 участниц.
+        - используй шанс стать одной из 10 участниц.
         Для этого подключай друзей, публикуй вау-новость в своих соцсетях
       </div>
     </div>
@@ -236,6 +236,22 @@
         Генеральний директор
         <br>
         УК Sletat.ru
+      </div>
+    </div>
+
+    <div class="jury-item">
+      <div class="jury-item-photo">
+        <%= image_tag(asset_pack_path('mihriban.jpg'), size: "180x180") %>
+      </div>
+      <div class="jury-item-name">
+        Михрибан Илмаз
+      </div>
+      <div class="jury-item-info">
+        Заместитель Генерального
+        <br>
+        директора по работе
+        <br>
+        с отелями Kilit Global
       </div>
     </div>
 
