--- a/app/views/shared/_organizator.erb
+++ b/app/views/shared/_organizator.erb
@@ -71,6 +71,13 @@
       >
         <%= image_tag(asset_pack_path('BGlogos.svg'), size: "280x52", alt: "https://www.bgoperator.ru/") %>
       </a>
+      <a
+      class="partners-link"
+      href="http://kilitglobal.com/"
+      target="_blank"
+      >
+        <%= image_tag(asset_pack_path('kilit-global.svg'), size: "230x53", alt: "http://kilitglobal.com/") %>
+      </a>
     </div>
   </div>
 
