--- a/app/views/header/_header.html.slim
+++ b/app/views/header/_header.html.slim
@@ -74,9 +74,7 @@ header class="#{request.fullpath != '/' && 'header-collapse'}"
         h4#paymentLabel.modal-title МИСС ТУРИЗМ-2017
       .modal-body
         p
-          | Приглашает Топ менеджеров  принять участие в фееричном финале конкурса Мисс Туризм-2017 который
-          | пройдет с 05.11 по 08.11.2017 г. там, где царит атмосфера вечного праздника и веселья, в шикарном
-          | отеле Rixos Sungate 5*.
+          | Приглашаем Топ менеджеров  принять участие в фееричном финале конкурса Мисс Туризм-2017 который пройдет с 05.11 по 08.11.2017 г. там, где царит атмосфера вечного праздника и веселья, в шикарном отеле Rixos Sungate 5*.
         p
           |Стоимость участия:
         p
@@ -90,11 +88,11 @@ header class="#{request.fullpath != '/' && 'header-collapse'}"
           b 199 USD
         p В стоимость тура входит:
         ul
-          li - авиаперелет а/к «Россия» Москва-Анталия-Москва;
-          li - проживание в отеле Rixos Sungate 5*;
-          li - питание по программе Ultra ALL;
-          li - развлекательная программа;
-          li - медицинская страховка.
+          li авиаперелет а/к «Россия» Москва-Анталия-Москва;
+          li проживание в отеле Rixos Sungate 5*;
+          li питание по программе Ultra ALL;
+          li развлекательная программа;
+          li медицинская страховка.
         p
           |Заявки на участие в туре рассматриваются по адресу:
           a href="mailto:privet@missturizm.ru"
