--- a/app/views/pages/home.erb
+++ b/app/views/pages/home.erb
@@ -255,5 +255,19 @@
       </div>
     </div>
 
+    <div class="jury-item">
+      <div class="jury-item-photo">
+        <%= image_tag(asset_pack_path('spilman.jpg'), size: "180x180") %>
+      </div>
+      <div class="jury-item-name">
+        Вадим Шпильман
+      </div>
+      <div class="jury-item-info">
+        Генеральный директор
+        <br>
+        OneTouch&Travel
+      </div>
+    </div>
+
   </div>
 </div>
