--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
   <%= yield :og %>
   <%== csrf_meta_tags %>
   <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:700&amp;subset=cyrillic,cyrillic-ext,latin-ext" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Oswald:500" rel="stylesheet">
   <%== stylesheet_link_tag 'application' %>
   <%== stylesheet_pack_tag 'app-styles' %>
   <%== javascript_include_tag 'application' %>
