--- a/app/views/pages/home.erb
+++ b/app/views/pages/home.erb
@@ -330,5 +330,33 @@
       </div>
     </div>
 
+    <div class="jury-item">
+      <div class="jury-item-photo">
+        <%= image_tag(asset_pack_path('pustov.jpg'), size: "180x180") %>
+      </div>
+      <div class="jury-item-name">
+        Леонид Пустов
+      </div>
+      <div class="jury-item-info">
+        сооснователь
+        <br>
+        TravelStartups
+      </div>
+    </div>
+
+    <div class="jury-item">
+      <div class="jury-item-photo">
+        <%= image_tag(asset_pack_path('pobedkin.jpg'), size: "180x180") %>
+      </div>
+      <div class="jury-item-name">
+        Константин Победкин
+      </div>
+      <div class="jury-item-info">
+        Генеральный директор
+        <br>
+        OnlineTours
+      </div>
+    </div>
+
   </div>
 </div>
