--- a/app/views/header/_header.html.slim
+++ b/app/views/header/_header.html.slim
@@ -69,7 +69,7 @@ header class="#{request.fullpath != '/' && 'header-collapse'}"
   .modal-dialog role="document"
     .modal-content
       .modal-header
-        button.close aria-label="Close" data-dismiss="modal" type="button"
+        button.close.social-group-btn aria-label="Close" data-dismiss="modal" type="button"
           span aria-hidden="true"  &times;
         h4#paymentLabel.modal-title МИСС ТУРИЗМ-2017
       .modal-body
