--- a/app/views/shared/_anketa_mini.erb
+++ b/app/views/shared/_anketa_mini.erb
@@ -1,16 +1,20 @@
 <%- photo = user.photos.present? ? user.photos.find_by(root: true) : nil %>
 <%= link_to user_path(user), class: "anketa-item" do %>
   <div class="anketa-item-img">
-    <div class="anketa-item-count" id="anketa-item-count-<%= user.number%>">
+    <div class="anketa-item-count" id="anketa-item-count-<%= user.number %>">
       <div class="anketa-item-count-value">
         <%= user.votes %>
       </div>
 
-      <% if user_signed_in? && !policy(user).profile? %>
-        <% if VotesQuery.new.is_votes(current_user, user.number) %>
-          <%= button_to votes_voteable_path(user), :remote => true do %>
-            <%= image_tag asset_pack_path 'icon-like-red.svg' %>
-          <%- end %>
+      <% if false %>
+        <% if user_signed_in? && !policy(user).profile? %>
+          <% if VotesQuery.new.is_votes(current_user, user.number) %>
+            <%= button_to votes_voteable_path(user), :remote => true do %>
+              <%= image_tag asset_pack_path 'icon-like-red.svg' %>
+            <%- end %>
+          <% else %>
+            <%= image_tag asset_pack_path 'icon-like.svg' %>
+          <% end %>
         <% else %>
           <%= image_tag asset_pack_path 'icon-like.svg' %>
         <% end %>
