--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,6 +40,11 @@
   <% end %>
 <% end %>
 
+<div class="container content-container" style="padding-bottom: 0;padding-top: 0;">
+  <div class="alert alert-dismissible alert-success text-center">
+    Голосование остановлено!
+  </div>
+</div>
 
 <%= yield %>
 <% cache do %>
