--- a/app/views/pages/home.erb
+++ b/app/views/pages/home.erb
@@ -48,6 +48,7 @@
     <% end %>
 
     <div class="counter">
+      <!--
       <div class="counter-items">
         <%- ("2017-10-31".to_date - Date.current).numerator.to_s.split('').each do |item| %>
           <div class="counter-item">
@@ -60,6 +61,11 @@
       </div>
       <div class="counter-label">
         до окончания голосования
+      </div>
+      -->
+      <div class="counter-label">
+        <br>
+        голосование остановлено
       </div>
     </div>
 
