--- a/app/javascript/packs/_vars.scss
+++ b/app/javascript/packs/_vars.scss
@@ -29,6 +29,10 @@ $link-hover-color: lighten($link-color, 15%) !default;
 $font-size-base: 16px;
 $font-size-small: 16px;
 
+
+//$brand-danger: #D6574B !default;
+$state-danger-bg: #D6574B !default;
+$state-danger-text: #fff !default;
 $brand-success:         #5cb85c !default;
 
 $btn-success-bg: #ffcc00 !default;
