--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -33,7 +33,7 @@
         <div class="profile-position">
           <%- if @user.is_disqualify %>
             <div class="alert alert-danger text-center">
-              Участница дисквалифицированна за накрутку голосов
+              Участница дисквалифицированна
             </div>
           <% else %>
             <%= render 'users/anketa_count' %>
