--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -29,6 +29,10 @@
       <%= f.check_box(:is_disqualify) %>
     </div>
     <div class="form-group">
+      <%= label_tag(:votes, "Голоса:") %>
+      <%= f.text_field(:votes) %>
+    </div>
+    <div class="form-group">
       <%= f.submit 'Сохранить', :class => 'btn btn-success' %>
     </div>
   <% end %>
