--- a/app/views/pages/home.erb
+++ b/app/views/pages/home.erb
@@ -65,14 +65,14 @@
       -->
       <div class="counter-label">
         <br>
-        голосование остановлено
+        Подсчет голосов завершен
       </div>
     </div>
 
   </div>
 
   <div class="home_top">
-    ТОП 10 Участниц
+    Финалистки конкурса
   </div>
 
   <div class="owl-carousel home-users">
