--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,7 +42,7 @@
 
 <div class="container content-container" style="padding-bottom: 0;padding-top: 0;">
   <div class="alert alert-dismissible alert-success text-center">
-    Идёт подсчёт голосов
+    Подсчет голосов завершен
   </div>
 </div>
 
