--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -114,7 +114,7 @@
             <% else %>
               <div class="vote-btn-container text-center">
                 <span class="vote-btn vote-btn_final">
-                  Голосование остановлено
+                  Подсчет голосов завершен
                 </span>
               </div>
             <% end %>
